# real_estate_map

./: .gitignore  README.md  Real estates in St.John's.html  get_kijiji_content.py  index.html  kijiji_jsonld.py  map_estate.py  map_estate_by_layer.py  pyproject.toml  requirements.txt  web_turtle.py
development-records/: DEVELOPMENT_DOCUMENT.md  DEVELOPMENT_RECORD_01.md
reference/: scraper.py
